# thrussh-hs

./: ChangeLog.md  LICENSE  Makefile  README.md  package.yaml  stack.yaml  thrussh-hs.cabal
src/: Lib.hs
thrusshlib/: Cargo.toml
thrusshlib/src/: client.rs  lib.rs
