[package]
name = "thrusshlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curryrs = "0.2.0"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
futures = "0.3.21"
tokio = "1.19.2"
env_logger = "0.9.0"
anyhow = "1.0.58"
openssl = "0.10.40"

[lib]
name = "thrusshlib"
path = "src/lib.rs"
crate-type = ["cdylib"]
